--- a/pages/Barkley_Mideast_Devices_1.json
+++ b/pages/Barkley_Mideast_Devices_1.json
@@ -1,83 +1,83 @@
 [
   {
-    "deviceId": "23843",
-    "deviceName": "Sea-Bird SeaCAT SBE19plus V2 7028",
+    "device_id": "23843",
+    "device_name": "Sea-Bird SeaCAT SBE19plus V2 7028",
     "sensors": [
-      [
-        "16713",
-        "Pressure"
-      ],
-      [
-        "16711",
-        "Sound Speed"
-      ],
-      [
-        "16712",
-        "Temperature"
-      ],
-      [
-        "16708",
-        "Conductivity"
-      ],
-      [
-        "16710",
-        "Density"
-      ],
-      [
-        "16720",
-        "Practical Salinity"
-      ],
-      [
-        "16721",
-        "Sigma-t"
-      ],
-      [
-        "16709",
-        "Sigma-theta (0 dbar)"
-      ]
+      {
+        "sensor_id": "16713",
+        "sensor_name": "Pressure"
+      },
+      {
+        "sensor_id": "16711",
+        "sensor_name": "Sound Speed"
+      },
+      {
+        "sensor_id": "16712",
+        "sensor_name": "Temperature"
+      },
+      {
+        "sensor_id": "16708",
+        "sensor_name": "Conductivity"
+      },
+      {
+        "sensor_id": "16710",
+        "sensor_name": "Density"
+      },
+      {
+        "sensor_id": "16720",
+        "sensor_name": "Practical Salinity"
+      },
+      {
+        "sensor_id": "16721",
+        "sensor_name": "Sigma-t"
+      },
+      {
+        "sensor_id": "16709",
+        "sensor_name": "Sigma-theta (0 dbar)"
+      }
     ],
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "deviceCode": "SBECTD19p7028"
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "device_code": "SBECTD19p7028"
   },
   {
-    "deviceId": "23048",
-    "deviceName": "Sea-Bird SBE 63 Dissolved Oxygen Sensor 630109",
+    "device_id": "23048",
+    "device_name": "Sea-Bird SBE 63 Dissolved Oxygen Sensor 630109",
     "sensors": [
-      [
-        "9228",
-        "Oxygen Concentration Corrected"
-      ],
-      [
-        "9668",
-        "Oxygen Concentration Uncorrected"
-      ],
-      [
-        "9374",
-        "Temperature"
-      ]
+      {
+        "sensor_id": "9228",
+        "sensor_name": "Oxygen Concentration Corrected"
+      },
+      {
+        "sensor_id": "9668",
+        "sensor_name": "Oxygen Concentration Uncorrected"
+      },
+      {
+        "sensor_id": "9374",
+        "sensor_name": "Temperature"
+      }
     ],
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "deviceCode": "SBE63630109"
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "device_code": "SBE63630109"
   },
   {
-    "deviceId": "23843 & 23048",
-    "deviceName": "Sea-Bird SeaCAT SBE19plus V2 7028 & Sea-Bird SBE 63 Dissolved Oxygen Sensor 630109",
+    "device_id": "23843 & 23048",
+    "device_name": "Sea-Bird SeaCAT SBE19plus V2 7028 & Sea-Bird SBE 63 Dissolved Oxygen Sensor 630109",
     "sensors": [
       [
-        [
-          "16712",
-          "Temperatures"
-        ],
-        [
-          "9374",
-          "Temperatures"
-        ]
+        {
+          "sensor_id": "16712",
+          "sensor_name": "Temperatures"
+        },
+        {
+          "sensor_id": "9374",
+          "sensor_name": "Temperatures"
+        }
       ]
     ],
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "deviceCode": "SBECTD19p7028 & SBE63630109"
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "device_code": "SBECTD19p7028 & SBE63630109"
   }
 ]
