--- a/pages/Barkley_Mideast_Devices_2.json
+++ b/pages/Barkley_Mideast_Devices_2.json
@@ -1,127 +1,113 @@
 [
   {
-    "deviceId": "12003",
-    "deviceName": "Nortek Aquadopp HR-Profiler 2 MHz 2978",
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "dataPreviewOptions": [
-      [
-        3,
-        1,
-        0
-      ],
-      [
-        3,
-        2,
-        0
-      ],
-      [
-        57,
-        1,
-        0
-      ],
-      [
-        57,
-        2,
-        0
-      ]
+    "device_id": "12003",
+    "device_name": "Nortek Aquadopp HR-Profiler 2 MHz 2978",
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "data_preview_options": [
+      {
+        "data_product_format_id": 3,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 3,
+        "plot_number": 2
+      },
+      {
+        "data_product_format_id": 57,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 57,
+        "plot_number": 2
+      }
     ],
-    "searchTreeNodeId": 18,
-    "deviceCategoryId": 73,
-    "deviceCode": "NTAquadoppHRCP2978",
-    "fileExtensions": null
+    "search_tree_node_id": 18,
+    "device_category_id": 73,
+    "device_code": "NTAquadoppHRCP2978",
+    "file_extensions": null
   },
   {
-    "deviceId": "11206",
-    "deviceName": "RDI Workhorse Quartermaster ADCP 150 kHz (9455)",
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "dataPreviewOptions": [
-      [
-        3,
-        1,
-        0
-      ],
-      [
-        3,
-        2,
-        0
-      ],
-      [
-        10,
-        1,
-        0
-      ],
-      [
-        10,
-        2,
-        0
-      ],
-      [
-        11,
-        1,
-        0
-      ],
-      [
-        11,
-        2,
-        0
-      ]
+    "device_id": "11206",
+    "device_name": "RDI Workhorse Quartermaster ADCP 150 kHz (9455)",
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "data_preview_options": [
+      {
+        "data_product_format_id": 3,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 3,
+        "plot_number": 2
+      },
+      {
+        "data_product_format_id": 10,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 10,
+        "plot_number": 2
+      },
+      {
+        "data_product_format_id": 11,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 11,
+        "plot_number": 2
+      }
     ],
-    "searchTreeNodeId": 18,
-    "deviceCategoryId": 69,
-    "deviceCode": "BC_POD3_ADCP",
-    "fileExtensions": [
+    "search_tree_node_id": 18,
+    "device_category_id": 69,
+    "device_code": "BC_POD3_ADCP",
+    "file_extensions": [
       "txt",
       "dt4"
     ]
   },
   {
-    "deviceId": "11401",
-    "deviceName": "Kongsberg Mesotech Rotary Sonar 1071 (0711215)",
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "dataPreviewOptions": [
-      [
-        210,
-        1,
-        0
-      ],
-      [
-        210,
-        2,
-        0
-      ]
+    "device_id": "11401",
+    "device_name": "Kongsberg Mesotech Rotary Sonar 1071 (0711215)",
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "data_preview_options": [
+      {
+        "data_product_format_id": 210,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 210,
+        "plot_number": 2
+      }
     ],
-    "searchTreeNodeId": 18,
-    "deviceCategoryId": 34,
-    "deviceCode": "BC_POD3_ROTSONAR",
-    "fileExtensions": [
+    "search_tree_node_id": 18,
+    "device_category_id": 34,
+    "device_code": "BC_POD3_ROTSONAR",
+    "file_extensions": [
       "txt",
       "dt4"
     ]
   },
   {
-    "deviceId": "24074",
-    "deviceName": "Nanometrics TitanEA (S/N 000646)",
-    "locationCode": "BACME",
-    "locationName": "Barkley Canyon Mid-East",
-    "dataPreviewOptions": [
-      [
-        3,
-        1,
-        0
-      ],
-      [
-        3,
-        2,
-        0
-      ]
+    "device_id": "24074",
+    "device_name": "Nanometrics TitanEA (S/N 000646)",
+    "location_code": "BACME",
+    "location_name": "Barkley Canyon Mid-East",
+    "data_preview_options": [
+      {
+        "data_product_format_id": 3,
+        "plot_number": 1
+      },
+      {
+        "data_product_format_id": 3,
+        "plot_number": 2
+      }
     ],
-    "searchTreeNodeId": 494,
-    "deviceCategoryId": 43,
-    "deviceCode": "NANOMETRICSTITANEA000646",
-    "fileExtensions": [
+    "search_tree_node_id": 494,
+    "device_category_id": 43,
+    "device_code": "NANOMETRICSTITANEA000646",
+    "file_extensions": [
       "txt",
       "dt4"
     ]
