--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ version = "0.0.1"
 dependencies = [
     "streamlit",
     "plotly",
-    "onc"
+    "onc",
+    "isodate"
 ]
 
 requires-python = ">= 3.10"
